# market_load_prediction

./: .gitignore  README.md  dump.rdb
article/: main.tex
article/src/: 1_annotation.tex  2_introduction.tex  3_market_implementation.tex  4_load_prediction.tex  6_concluding_remarks.tex  7_references.tex  8_addition.tex  titlepage.tex
article/styles/: Fonts.sty  Graphics.sty  Hypers.sty  Index.sty  Lists.sty  Maths.sty  Pages.sty  Quotes.sty  Sections.sty  Shrifty.sty  Sources.sty  Tables.sty  Theorems.sty  etc.sty
backend/cmake/: gtest.cmake
backend/command_receiver/: command_receiver.h  example.cpp
backend/connection_manager/: connection_manager.h  example.cpp
backend/matching_engine/: CMakeLists.txt  matching_engine.h
backend/response_sender/: example.cpp  response_sender.h
backend/starter/: CMakeLists.txt  run  starter.cpp
backend/trade_stream/: example.cpp  run_trade_stream  trade_tream.h
backend/user_storage/: user_storage.h
cmake/: gtest.cmake
command_receiver/: command_receiver.h
entities/direction/: direction.h
entities/order/: order.h
entities/quote/: CMakeLists.txt  quote.cpp  quote.h
entities/ring_buffer/: example.cpp  ring_buffer.h
entities/trade/: trade.h
frontend/: db.sqlite3  dump.rdb  run_server.sh
historical_data/: Binance_BTCUSDT_1h.csv  Binance_BTCUSDT_1s.csv
load_prediction/: market_maker.py  research.ipynb  run_market_maker.sh
market_manager/: market_manager.h
matching_engine/: CMakeLists.txt  matching_engine.cpp  matching_engine.h
starter/: starter.cpp
trade_stream/: example.cpp  run_trade_stream
(+29 files in other folders)
